xpano (0.3.2-0~ppa1~{{dist}}) {{dist}}; urgency=low

  * Initial release.

 -- Tomas Krupka <tomas@krupkat.cz>  Thu, 01 Sep 2022 10:09:07 +0200